maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:7: error: ';' expected but ',' found.
  xSortie, ySortie = chercherSortie
         ^ShortestPathMaze:12: error: '=' expected but ',' found.
def chercheSortie(xMax:Int, yMax:Int):Int,Int = {
                                         ^ShortestPathMaze:29: error: illegal start of simple expression
def ecritIndications(x:Int, y:Int, xMax:Int, yMax:Int, cnt:Int) {
^